<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="theme_category"
        android:title="@string/generalSettings">

        <ListPreference
            android:key="appThemePref"
            android:title="@string/appTheme"
            android:summary="@string/appThemeSummury"
            android:defaultValue="system"
            android:entries="@array/darkModeOptionValues"
            android:entryValues="@array/darkModeOptions"
            />



<!--        <ListPreference
            android:defaultValue="never"
            android:entries="@array/preloadOptionValues"
            android:entryValues="@array/preloadOptions"
            android:key="appPreloadPref"
            android:summary="Artikel bereits beim Öffnen der App herunterladen"
            android:title="Artikel preloading"
            android:visibility="invisible"
            tools:visibility="invisible" />-->

    </PreferenceCategory>



</PreferenceScreen>