<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:colorBackground"
    >


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:progressTint="?android:colorAccent"
        />

    <TextView
        android:id="@+id/articleLoadView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_centerInParent="true"
        android:text="@string/loadArticle"
        android:textColor="?android:colorAccent"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/articleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_reload_white"
                />

            <TextView
                android:id="@+id/previewImageSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5pt"
                android:textAlignment="textStart"
                android:textStyle="italic"
                android:visibility="gone"
                android:textColor="?android:textColorSecondary"
                />

            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:autoSizeTextType="uniform"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="5dp"
                android:text="@string/title"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="?android:textColorPrimary"
                android:textSize="15sp"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/articleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/description"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/articleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                tools:visibility="invisible" />

            <RelativeLayout
                android:id="@+id/siteNavigator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                >

                <TextView
                    android:id="@+id/bPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previousSite"
                    android:textColor="?attr/colorAccent"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvCurrentPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="" />

                <TextView
                    android:id="@+id/bNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentEnd="true"
                    android:text="@string/nextSite"
                    android:textColor="?attr/colorAccent"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/videoList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />


            <!-- View where the video will be shown when video goes fullscreen -->

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/videoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </RelativeLayout>


</RelativeLayout>

